[package]
name = "information"
version = "0.1.1"
edition = "2021"
description = "Information theory functions to use with ndarray"
documentation = "https://docs.rs/information"
repository = "https://github.com/noamteyssier/information"
license = "MIT"
keywords = ["information_theory", "statistics", "ndarray", "math", "entropy"]
categories = ["science", "mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.63"
approx = "0.5.1"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
